# Cargo.toml for pf-sniper

[package]
name = "pf-sniper"
version = "0.1.0"
edition = "2021"
authors = ["SAHA"]
description = "Pump.fun Sniping Bot - Complete Build"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Solana ecosystem
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
solana-account-decoder = "2.0"
solana-program = "2.0"
spl-token = "4.0"
anchor-client = "0.30"
jito-bundle = "0.1"

# gRPC for Geyser/Shredstream
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
solana-stream-sdk = "0.1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Telegram bot
teloxide = { version = "0.12", features = ["macros", "auto-send"] }

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"

# Configuration
config = "0.14"
toml = "0.8"
serde_derive = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
argon2 = "0.5"
rand = "0.8"
bs58 = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Math and statistics
statrs = "0.17"
linfa = "0.7"
linfa-logistic = "0.7"
ndarray = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"

# Utilities
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[[bin]]
name = "pf-sniper"
path = "src/main.rs"
