[package]
name = "pf-sniper"
version = "0.1.0"
edition = "2021"
authors = ["SAHA"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
ratatui = "0.26"
crossterm = "0.27"
toml = "0.8"
rand = "0.8"
bs58 = "0.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1.19"
base64 = "0.22"
hex = "0.4"
statrs = "0.17"

[[bin]]
name = "pf-sniper"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
